syntax = "proto3";

package j5.schema.v1;

import "buf/validate/validate.proto";
import "j5/list/v1/annotations.proto";

option go_package = "github.com/pentops/j5/gen/j5/schema/v1/schema_j5pb";

message RootSchema {
  oneof type {
    Oneof oneof = 12;
    Object object = 21;
    Enum enum = 32;
  }
}

message Field {
  oneof type {
    // Special Cases
    AnyField any = 11;

    // Named Root Types, wrapped as Field to separate the object-property rules
    // from the type itself.
    OneofField oneof = 12;
    ObjectField object = 21;
    EnumField enum = 32;

    // Complex Types
    ArrayField array = 20;
    MapField map = 22;

    // Scalar Types
    StringField string = 30;
    IntegerField integer = 31;
    FloatField float = 33;
    BooleanField boolean = 34;
    BytesField bytes = 35;
    DecimalField decimal = 36;
    DateField date = 37;
    TimestampField timestamp = 38;
    KeyField key = 39;
  }
}

message Ref {
  string package = 1;
  string schema = 2;
}

// Allows anything
message AnyField {}

// ObjectAsField is an object as-a-field in an ObjectProperty
message ObjectField {
  oneof schema {
    Ref ref = 1; // Will always point to an Object.
    Object object = 2;
  }

  bool additional_properties = 4;
  Rules rules = 5;

  message Rules {
    optional uint64 min_properties = 1;
    optional uint64 max_properties = 2;
  }
}

message Object {
  string name = 1 [(buf.validate.field).string.pattern = "^[A-Z][a-zA-Z0-9_]*$"];

  string description = 2; // brief text description, will not contain markdown.

  // When the object is an entity type, the entity details are available in the
  // entity set for the same package.
  optional string entity = 3 [(buf.validate.field).string.pattern = "^[A-Z][a-zA-Z0-9_]*$"];

  repeated ObjectProperty properties = 4;
}

message OneofField {
  oneof schema {
    Ref ref = 1; // Will always point to a Oneof
    Oneof oneof = 2;
  }

  Rules rules = 4;
  j5.list.v1.OneofRules list_rules = 5;
  message Rules {}
}

// Similar to ObjectItem (it is an object in JSON Schema), but where exactly one
// property should be set
message Oneof {
  string name = 1;
  string description = 2;

  repeated ObjectProperty properties = 3;
}

message EnumField {
  oneof schema {
    Ref ref = 1; // Will always point to an Enum
    Enum enum = 2;
  }

  Rules rules = 4;
  j5.list.v1.EnumRules list_rules = 5;

  message Rules {
    repeated string in = 1;
    repeated string not_in = 2;
  }
}

message Enum {
  string name = 1;
  string description = 2;

  string prefix = 3;

  repeated Value options = 4;

  message Value {
    string name = 1;
    int32 number = 2;
    string description = 3;
  }
}

message ArrayField {
  Rules rules = 1;
  Field items = 2;

  message Rules {
    optional uint64 min_items = 1;
    optional uint64 max_items = 2;
    optional bool unique_items = 3;
  }
}

message MapField {
  Field item_schema = 1;
  Field key_schema = 2;
  Rules rules = 3;
  message Rules {}
}

message StringField {
  optional string format = 1;
  Rules rules = 3;
  list.v1.OpenTextRules list_rules = 4;

  message Rules {
    optional string pattern = 1;
    optional uint64 min_length = 2;
    optional uint64 max_length = 3;
  }
}

message FloatField {
  Format format = 1;
  Rules rules = 2;
  j5.list.v1.FloatRules list_rules = 3;

  enum Format {
    FORMAT_UNSPECIFIED = 0;
    FORMAT_FLOAT32 = 1;
    FORMAT_FLOAT64 = 2;
  }

  message Rules {
    optional bool exclusive_maximum = 1;
    optional bool exclusive_minimum = 2;
    optional double minimum = 3;
    optional double maximum = 4;
    optional double multiple_of = 5;
  }
}

message IntegerField {
  Format format = 1;
  Rules rules = 2;
  j5.list.v1.IntegerRules list_rules = 3;

  enum Format {
    FORMAT_UNSPECIFIED = 0;
    FORMAT_INT32 = 1;
    FORMAT_INT64 = 2;
    FORMAT_UINT32 = 3;
    FORMAT_UINT64 = 4;
  }

  message Rules {
    optional bool exclusive_maximum = 1;
    optional bool exclusive_minimum = 2;
    optional int64 minimum = 3;
    optional int64 maximum = 4;
    optional int64 multiple_of = 5;
  }
}

message BooleanField {
  Rules rules = 1;
  j5.list.v1.BooleanRules list_rules = 2;

  message Rules {
    optional bool const = 1;
  }
}

message BytesField {
  Rules rules = 1;
  message Rules {}
}

message DecimalField {
  Rules rules = 1;

  message Rules {}
}

message DateField {
  Rules rules = 1;

  message Rules {}
}

message TimestampField {
  Rules rules = 1;
  j5.list.v1.TimestampRules list_rules = 2;

  message Rules {}
}

message KeyField {
  Rules rules = 1;
  KeyFormat format = 2;
  j5.list.v1.KeyRules list_rules = 3;

  message Rules {}
}

enum KeyFormat {
  KEY_FORMAT_UNSPECIFIED = 0; // free text
  KEY_FORMAT_UUID = 1;
}

message ObjectProperty {
  Field schema = 1;
  string name = 3;
  bool required = 4;
  bool explicitly_optional = 5;
  bool read_only = 6;
  bool write_only = 7;
  string description = 8;

  // For flattened objects,
  // Defines the path from the root proto message to the field. All but the last
  // node will be message fields holding a message kind, and the last node is
  // the field containing the property type.
  repeated int32 proto_field = 11;
}
